# Django-GeoData

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
pyGeoData/: __init__.py  cli.py
pyGeoData/api/v1/: __init__.py
pyGeoData/api/v1/endpoints/: countries.py  districts.py  states.py
pyGeoData/core/: __init__.py  data_manager.py
pyGeoData/core/data/: countries.json  districts.json  states.json
pyGeoData/core/models/: __init__.py  countries.py  districts.py  states.py
pyGeoData/core/schemas/: __init__.py  countries.py  districts.py  states.py
pyGeoData/tests/: __init__.py  test_countries.py  test_districts.py  test_states.py
src/: models.py
src/migrations/: 0001_initial.py  0002_populate_initial_data.py
