[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyGeoData"
version = "0.1.0"
description = "A modular Python package for geographic data (countries, states, districts) with FastAPI support"
readme = "README.md"
authors = [{ name = "amisalaam", email = "your.email@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
countries = []
states = ["pyGeoData[countries]"]
districts = ["pyGeoData[states]"]
all = ["pyGeoData[countries,states,districts]"]

[project.urls]
Homepage = "https://github.com/amisalaam/PyGeoData"
Repository = "https://github.com/amisalaam/PyGeoData.git"

[project.scripts]
pygeodata = "pyGeoData.cli:app"
