[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-geodata"
version = "0.1.0"
dependencies = [
    "Django>=3.2",
]
requires-python = ">=3.6"
authors = [
    {name = "Amisalaam", email = "amisalaam9@gmail.com"},
]
description = "A Django library for managing countries, states, and districts with foreign key relationships"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]